--- a/Correlation Study 1 - Movies.ipynb
+++ b/Correlation Study 1 - Movies.ipynb
@@ -1818,8 +1818,8 @@
     "correlation_matrix = df_numerized.corr()\n",
     "sns.heatmap(correlation_matrix, annot = True)\n",
     "plt.title(\"Correlation Matrix Extended\")\n",
-    "plt.xlabel(\"Movie feilds\")\n",
-    "plt.ylabel(\"Movie feilds\")\n",
+    "plt.xlabel(\"Movie fields\")\n",
+    "plt.ylabel(\"Movie fields\")\n",
     "plt.show()"
    ]
   },
