Update Correlation Study 1 - Movies.ipynb
Corrected label misspelling

--- a/Correlation Study 1 - Movies.ipynb
+++ b/Correlation Study 1 - Movies.ipynb
@@ -1325,8 +1325,8 @@
     "correlation_matrix = df.corr()\n",
     "sns.heatmap(correlation_matrix, annot = True)\n",
     "plt.title(\"Correlation Matrix\")\n",
-    "plt.xlabel(\"Movie feilds\")\n",
-    "plt.ylabel(\"Movie feilds\")\n",
+    "plt.xlabel(\"Movie fields\")\n",
+    "plt.ylabel(\"Movie fields\")\n",
     "plt.show()"
    ]
   },
